# zmp

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  notes.txt  package-lock.json  package.json  slopmock.jsx  zmp.db
.github/workflows/: build_test.yml  ci.yml  release.yml
helpers/: generate_100k_song_rows.py
migrations/: 01_zmp.sql  20260322122100_song.sql  20260322133313_filters.sql  20260322133320_song_filters.sql
scripts/: drop_db.sh  drop_db_dev.sh  generate_test_song_rows.py
src/: config.rs  filter.rs  main.rs  metadata.rs  player.rs  setting.rs  song.rs  song_filter.rs  sqlite.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 01_zmp.sql
src-tauri/src/: commands.rs  config.rs  errors.rs  filter.rs  lib.rs  main.rs  manager.rs  metadata.rs  player.rs  search_blob.rs  setting.rs  song.rs  song_filter.rs  song_metadata_filter_sync.rs  song_mutation.rs  song_query.rs  sqlite.rs  test.rs  watcher.rs
src-tauri/tests/: common.rs  filter_sqlite.rs  manager_sqlite.rs  metadata.rs  setting_sqlite.rs  song_filter_sqlite.rs  song_metadata_filter_sync.rs  song_mutation_sqlite.rs  song_query_sqlite.rs  song_sqlite.rs
src/application/: mod.rs  service_filter.rs  service_player.rs  service_setting.rs  service_song.rs  service_song_filter.rs  song_service.rs
src/config/: config.rs  mod.rs  settings.rs
src/database/: mod.rs  sqlite.rs
src/domain/: mod.rs
src/filter/: filter.rs  mod.rs  sqlite.rs
src/infrastructure/: mod.rs  repository_sqlite_filter.rs  repository_sqlite_setting.rs  (+3 more)
src/song/: mod.rs  (+2 more)
(+28 files in other folders)
