[package]
name = "zmp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
lofty = "0.23.3"
rodio = "0.22.2"
id3 = "1.16.4"
rand = "0.10.0"
async-trait = "0.1"
notify = "6"
tempfile = "3"
hound = "3"
tauri-plugin-log = "2"
log = "0.4"
